travel/style.css
/* ... */
@media (max-width: 390px) {

  .header {
    height: 75px;
    min-height: 75px;
  }

  .container {
    padding-left: 15px;
    padding-right: 15px;
  }

  .header-container {
    justify-content: space-between;
    background-image: url(./assets/img/mobile-background.jpg);
  }

  .header-container::before {
    min-width: 320px;
    height: 250px;
    left: 0;
    background: linear-gradient(180deg, #0D606F 5%, rgba(13, 96, 111, 0) 25.1%);
    box-shadow: none;
  }

  .header-content {
    padding: 0;
  }

  .logo {
    margin: 45px 0 0 0;
  }

  .burger {
    display: block;
    position: absolute;
    top: 43px;
    right: 0;
    margin-right: 20px;
    width: 35px;
    height: 32px;
    background-color: transparent;
    background-image: url(./assets/img/burger.svg);
  }

  .nav-close {
    display: block;
    position: absolute;
    top: 8px;
    left: 8px;
    width: 30px;
    height: 30px;
    background-color: transparent;
    background-image: url(./assets/img/close.svg);
    border: none;
  }

  .burger,
  .nav-close {
    box-shadow: none;
  }
  
  .visually-hidden {
    display: block;
  }

  .navigation {
    position: fixed;
    flex-direction: column;
    justify-content: flex-start;
    z-index: 5;
    padding-right: 16px;
    top: 0;
    right: -165px;
    font-size: 16px;
    background-color: #F2785C;
    border-radius: 10px;
    box-shadow: 0px 4px 3px 0px #0D606F40;
    transition: transform 0.6s ease-in-out;
  }

  .navigation-active {
    transform: translateX(-165px);
    transition: transform 0.6s ease-in-out;
  }

  .nav-list {
    flex-direction: column;
    align-items: flex-end;
    padding-top: 44px;
    padding-bottom: 30px;
    padding-left: 44px;
    gap: 9px;
    font-size: 16px;
    line-height: 21px;
  }

  .nav-link {
    padding: 0;
  }

  .login-button,
  .logo-text,
  .main-title,
  .preview-text {
    display: none;
  }

  .preview {
    margin-left: -15px;
    margin-right: -15px;
    padding-top: 67px;
    padding-left: 0;
    padding-bottom: 61px;
    background-image: url(./assets/img/mobile-background.jpg);
    background-position-y: -75px;
    background-size: 100%;
    background-repeat: no-repeat;
  }

  .preview-content {
    width: 100%;
  }

  .search-label {
    margin: 0 15px;
  }

  .search-input::placeholder {
    padding-top: 16px;
    padding-left: 16px;
    font-size: 14px;
  }

  button,
  .search-button,
  .arrow-button {
    width: 92px;
    height: 30px;
    font-size: 11px;
    border-radius: 10px;
  }

  .search-button {
    position: absolute;
    top: 9px;
    right: 9px;
  }

  .section-title {
    padding-bottom: 20px;
    font-size: 14px;
    line-height: 19px;
  }

  .steps,
  .stories {
    padding-top: 20px;
  }

  .steps {
    padding-bottom: 0;
  }

  .steps-list {
    gap: 1px;
    margin: 0;
    padding-bottom: 20px;
    font-size: 10px;
  }

  .steps-item {
    justify-content: end;
  }

  .step-item-left {
    position: relative;
    flex-basis: 138px;
    /* padding-right: 12px; */
    text-align: left;
  }

  .step-item-center {
    margin: 0;
    padding-left: 10px;
    padding-bottom: 10px;
    width: 100%;
  }

  .step-item-right {
    position: relative;
    text-align: right;
  }

  .step-icon-bg {
    width: 70px;
    height: 70px;
    margin-bottom: 22px;
  }

  .step-icon-bg-left {
    position: absolute;
    left: 0;
    top: 0;
  }

  .step-icon-bg-right {
    position: absolute;
    right: 0;
    top: 0;
  }

  .step-icon {
    height: 70%;
    width:70%;
    margin-bottom: 19px;
  }

  .responsive {
    width: 50%;
    height: auto;
  }
  
  .slider {
    position: relative;
    margin-top: 1px;
  }

  .slider-list {
    padding-top: 0;
    padding-bottom: 0;
    gap: 30px;
    align-self: flex-start;
  }

  .desktop {
    display: none;
  }

  .slider-description {
    top: 8px;
    font-size: 20px;
  }

  .slider-arrows {
    position: absolute;
    top: 50%;
    transform: translateY(-30%);
    z-index: 1;
    display: flex;
    justify-content: space-between;
    padding-right: 5px;
    padding-left: 5px;
    width: 100%;
  }

  .pagination-list {
    margin-top: -20px;
    padding-bottom: 0;
    z-index: 1;
    gap: 6px;
  }

  .arrow-button {
    margin-top: 22px;
  }

  .destinations {
    padding-bottom: 0;
  }

  .stories {
    margin-left: -15px;
    margin-right: -15px;
  }

  .stories .section-title {
    padding-bottom: 10px;
  }

  .stories-cards {
    padding: 10px 15px;
    background-image: url(./assets/img/Stories-background-mobile.jpg);
  }

  .card {
    gap: 10px;
    padding-bottom: 15px;
  }

  .card-description {
    position: relative;
    height: 128px;
  }

  .card-title {
    padding-top: 5px;
    padding-bottom: 10px;
    font-size: 11px;
    line-height: 13.2px;
    font-weight: 700;
  }

  .card-text {
    padding: 0;
    font-size: 9px;
    -webkit-line-clamp: 8;
  }

  .read-more {
    position: absolute;
    bottom: 0;
    margin-top: -16px;
    font-size: 9px;
  }

  .stories-button {
    margin-top: -5px;
    margin-bottom: 3px;
  }

  .footer {
    min-height: 65px;
  }

  .footer-container {
    justify-content: flex-end;
    gap: 20px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-right: 17px;
  }

  .mobile-icons {
    height: 30px;
    opacity: 0.5;
  }

  .last-card {
    padding-bottom: 0;
  }

  .stories-button {
    margin-top: 1px;
    margin-bottom: 11px;
    right: 0;
  }
}

@media (max-width: 360px) {

  .header-container::before {
    height: 230px;
  }

  .preview {
    padding-bottom: 24px;
  }

  .card-text {
    -webkit-line-clamp: 7;
  }

  .step-item-center {
    padding-bottom: 0;
    width: 50%;
  }
  
  .step-icon-bg {
    margin-bottom: 12px;
  }
}


@media (max-width: 320px) {

  .header-container::before {
    height: 200px;
  }

  .preview {
    padding-bottom: 12px;
  }

  .slider-arrows {
    top: 50%;
    transform: translateY(-50%);
  }
}

